--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <link href='assets/images/meta_icons/apple-touch-icon-114x114.png' rel='apple-touch-icon-precomposed' sizes='114x114'>
   <link href='assets/images/meta_icons/apple-touch-icon-144x144.png' rel='apple-touch-icon-precomposed' sizes='144x144'>
 
-	<title>Meshines</title>
+	<title>Octoblu</title>
 
 	<!-- SCROLLS -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
@@ -86,53 +86,97 @@
 		</nav>
 	</header>
 
-
-<!-- <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="container">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="#"><div style="font-size: 30px;">MESHINES</div></a>
-    <a class='toggle-nav btn pull-left' href='#' style="display:none">
-        <i class='icon-reorder'></i>
-    </a>
-  </div>
-
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul id="mainmenu" class="nav navbar-nav navbar-right">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#services">Services</a></li>
-      <li><a href="#team">Team</a></li>
-      <li><a href="#portfolio">Works</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a class="nobar" href="features.html">Features</a></li>
-          <li><a class="nobar" href="HELP-FILE.html">Help File</a></li>
-          <li><a class="nobar" href="#">Menu Example</a></li>
-          <li class="divider"></li>
-          <li><a class="nobar" href="#">Menu Example</a></li>
-          <li class="divider"></li>
-          <li><a class="nobar" href="#">Menu Example</a></li>
-        </ul>
-      </li>
-      <div id="mainmenubar"></div>
-    </ul>
-  </div>
-  </div>
-</nav>
- -->
-
-
 	<!-- MAIN CONTENT AND INJECTED VIEWS -->
 	<div id="main">
+    <div id='main-nav-bg'></div>
+      <nav id='main-nav'>
+        <div class='navigation'>
+   
+          <ul class='nav nav-stacked'>
+            <li id="nav-dashboard" class='active'>
+              <a href='/dashboard'>
+                <i class='icon-dashboard'></i>
+                <span>Dashboard</span>
+              </a>
+            </li>
 
+            <li id="nav-connector" class="">
+              <a class='' href='/connector'>
+                <i class='icon-code-fork'></i>
+                <span>Connector</span>
+              </a>
+            </li>
+
+            <li id="nav-designer" class=''>
+              <a href="/designer"><i class='icon-edit'></i>
+                <span>Designer</span>
+              </a>
+            </li>
+
+            <li id="nav-analyzer" class='' >
+              <a href='/analyzer'>
+                <i class='icon-bar-chart'></i>
+                <span>Analyzer</span>
+              </a>
+            </li>
+
+            <li id="nav-controller" class=''>
+              <a href='/controller'>
+                <i class='icon-cogs'></i>
+                <span>Controller</span>
+              </a>
+            </li>
+
+            <li id="nav-community" class=''>
+              <a href='/community'>
+                <i class='icon-group'></i>
+                <span>Community</span>
+              </a>
+            </li>
+
+            <li id="nav-admin" class=''>
+              <a href='/admin'>
+                <i class='icon-lock'></i>
+                <span>Admin</span>
+              </a>
+            </li>
+           
+
+
+            <li id="nav-resources" class=''>
+              <a class='dropdown-collapse ' href="#" g-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
+                <i class='icon-book'></i>
+                <span>Resources</span>
+                <i class='icon-angle-down angle-down'></i>
+              </a>
+              <ul class='nav nav-stacked' ng-class="navCollapsed && 'in'">
+                <li class=''>
+                  <a href='/docs'>
+                    <i class='icon-cogs'></i>
+                    <span>API Docs</span>
+                  </a>
+                </li>
+                <li class=''>
+                  <a href='/pricing'>
+                    <i class='icon-table'></i>
+                    <span>Pricing tables</span>
+                  </a>
+                </li>
+                <li class=''>
+                  <a href='/faqs'>
+                    <i class='icon-bullhorn'></i>
+                    <span>FAQ</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+
+
+
+          </ul>
+        </div>
+      </div>
+    </nav>
 		<div ng-view></div>
 
 	</div>
