--- a/public/pages/community.html
+++ b/public/pages/community.html
@@ -1,103 +1,12 @@
-<div id='main-nav-bg'></div>
-  <nav id='main-nav'>
-    <div class='navigation'>
-<!--       <div class='search'>
-        <form action='search_results.html' method='get'>
-          <div class='search-wrapper'>
-            <input value="" class="search-query form-control" placeholder="Search..." autocomplete="off" name="q" type="text" />
-            <button class='btn btn-link icon-search' name='button' type='submit'></button>
-          </div>
-        </form>
-      </div>
- -->      
-      <ul class='nav nav-stacked'>
-        <li class=''>
-          <a href='/dashboard'>
-            <i class='icon-dashboard'></i>
-            <span>Dashboard</span>
-          </a>
-        </li>
-        <li class=''>
-          <a href="/designer"><i class='icon-edit'></i>
-            <span>Designer</span>
-          </a>
-        </li>
-        <li class=''>
-          <a  href='/analytics'>
-            <i class='icon-bar-chart'></i>
-            <span>Analytics</span>
-          </a>
-        </li>
-        <li class="">
-          <a class='' href='/connector'>
-            <i class='icon-code-fork'></i>
-            <span>Connector</span>
-          </a>
-        </li>
-
-        <li>
-          <a class='' href='/controller'>
-            <i class='icon-cogs'></i>
-            <span>Controller</span>
-          </a>
-        </li>
-
-        <li class="active">
-          <a class='' href='/community'>
-            <i class='icon-group'></i>
-            <span>Community</span>
-          </a>
-        </li>
-
-
-        <li>
-          <a class='' href='/admin'>
-            <i class='icon-lock'></i>
-            <span>Admin</span>
-          </a>
-        </li>
-       
-
-        <li class="">
-          <a class='dropdown-collapse ' href="#" g-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
-            <i class='icon-book'></i>
-            <span>Resources</span>
-            <i class='icon-angle-down angle-down'></i>
-          </a>
-          <ul class='nav nav-stacked' ng-class="navCollapsed && 'in'">
-            <li class=''>
-              <a href='/docs'>
-                <i class='icon-cogs'></i>
-                <span>API Docs</span>
-              </a>
-            </li>
-            <li class=''>
-              <a href='/pricing'>
-                <i class='icon-table'></i>
-                <span>Pricing tables</span>
-              </a>
-            </li>
-            <li class=''>
-              <a href='/faqs'>
-                <i class='icon-bullhorn'></i>
-                <span>FAQ</span>
-              </a>
-            </li>
-          </ul>
-        </li>
-
-
-
-      </ul>
+<section id='content'>
+  <div class='container'>
+    <br/><br/>
+    <div class='page-header page-header-with-buttons'>
+      <h1 class='pull-left'>
+        <i class='icon-group'></i>
+        <span>Community</span>              
+      </h1>
     </div>
-  </nav>
-  <section id='content'>
-    <div class='container'>
-      <br /><br />
-      
-      <!-- <iframe  width="100%" height="1000" ng-src="{{splunkFrame}}"></iframe> -->
-      <img src="assets/images/conversations.png">
-
-    </div>
-  </section>
-</div>
+    <img src="assets/images/conversations.png">
+  </div>
+</section>
