--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
 	<title>Octoblu</title>
 
 	<!-- SCROLLS -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+	<!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> -->
+  <link href="assets/stylesheets/bootstrap.min.css" rel="stylesheet" media="screen">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
   <link href="assets/stylesheets/light-theme.css" media="all" id="color-settings-body-color" rel="stylesheet" type="text/css" />
   <link href="assets/stylesheets/theme-colors.css" media="all" rel="stylesheet" type="text/css" />
@@ -29,12 +30,23 @@
   <link href="assets/stylesheets/custom.css" rel="stylesheet">
   <link href="assets/stylesheets/animation.css" rel="stylesheet">
   <link href="assets/stylesheets/font-awesome.min.css" rel="stylesheet" >
-  <!-- <link href="assets/stylesheets/isotope.css" rel="stylesheet"> -->
-  <!-- <link href="assets/stylesheets/hermesMenu.css" rel="stylesheet"> -->
-  <!-- <link href="assets/stylesheets/apolloGallery.css" rel="stylesheet"> -->
   <link href="assets/stylesheets/athenaSlide.css" rel="stylesheet">
   <link rel="shortcut icon" href="images/favicon.png">
 
+  <style type="text/css">
+    .reveal-animation.ng-enter {
+      -webkit-animation: enter_sequence 1s linear; /* Safari/Chrome */
+      animation: enter_sequence 1s linear; /* IE10+ and Future Browsers */
+    }
+    @-webkit-keyframes enter_sequence {
+      from { opacity:0; }
+      to { opacity:1; }
+    }
+    @keyframes enter_sequence {
+      from { opacity:0; }
+      to { opacity:1; }
+    }
+  </style>
 
 </head>
 <!-- SET THE CONTROLLER AND GET ALL TODOS WITH INITIALIZE FUNCTION -->
@@ -178,31 +190,19 @@
         </div>
       </div>
     </nav>
-		<div ng-view></div>
+		<div ng-view="" class="reveal-animation"></div>
 
 	</div>
 
-
-  <!-- // <script src="assets/javascripts/jquery/jquery.min.js" type="text/javascript"></script> -->
   <script src="http://code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
-  <!-- / jquery mobile (for touch events) -->
-  <!-- // <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js" type="text/javascript"></script> -->
-  <!-- / jquery migrate (for compatibility with new jquery) [required] -->
-  <!-- // <script src="assets/javascripts/jquery/jquery-migrate.min.js" type="text/javascript"></script> -->
   <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
-  <!-- / jquery ui -->
-  <!-- // <script src="assets/javascripts/jquery/jquery-ui.min.js" type="text/javascript"></script> -->
   <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js" type="text/javascript"></script>
-  <!-- / jQuery UI Touch Punch -->
   <script src="assets/javascripts/plugins/jquery_ui_touch_punch/jquery.ui.touch-punch.min.js" type="text/javascript"></script>
   <script src="assets/javascripts/jquery/jquery.cookie.js"></script>
-  <!-- / modernizr -->
   <script src="assets/javascripts/jquery/jquery.mobile.custom.min.js" type="text/javascript"></script>
 
   <script src="assets/javascripts/plugins/modernizr/modernizr.min.js" type="text/javascript"></script>
-  <!-- / retina -->
   <script src="assets/javascripts/plugins/retina/retina.js" type="text/javascript"></script>
-  <!-- / theme file [required] -->
   <script src="assets/javascripts/theme.js" type="text/javascript"></script>
 
   <script src="assets/javascripts/plugins/validate/jquery.validate.min.js" type="text/javascript"></script>
@@ -210,25 +210,27 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-animate.js"></script>
 
   <script src="assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
-  <!-- / bootstrap [required] -->
-  <!-- // <script src="assets/javascripts/bootstrap/bootstrap.js" type="text/javascript"></script> -->
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 
-  <!-- // <script src="assets/javascripts/demo.js" type="text/javascript"></script>   -->
-
-	<!-- // <script src="core.js"></script> -->
 	<script src="script.js"></script>	
   <script src="http://skynet.im/js/skynet.js"></script>
 
-  <!-- // <script src="assets/javascripts/isotope.min.js"></script> -->
-  <!-- // <script src="assets/javascripts/ermesMenu.js"></script> -->
-  <!-- // <script src="assets/javascripts/erosIntro.js"></script> -->
   <script src="assets/javascripts/athenaSlide.js"></script>
-  <!-- // <script src="assets/javascripts/apolloGallery.js"></script> -->
   <script src="assets/javascripts/demeterScroll.js"></script>
-  <!-- // <script src="assets/javascripts/main.js"></script> -->
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-2483685-30', 'octoblu.com');
+    ga('send', 'pageview');
+
+  </script>
 
 </body>
 </html>
