--- a/public/pages/gateways.html
+++ b/public/pages/gateways.html
@@ -1,4 +1,22 @@
-<div class="jumbotron text-center">
-  <p><img src="assets/images/robots/robot4.png" width="200"></p>
-  <h1>Gateways</h1>
+<div class='row'>
+  <div class='col-sm-12 box'>
+    <div class='box-header'>
+      <div class='title pull-left'>
+        <i class='icon-exchange'></i>
+        Gateways
+      </div>
+    </div>
+
+    <div ng-hide="gateways.length">No gateways found</div>
+    <div class="table-responsive">
+      <table class="table table-striped table-hover">
+        <tr ng-repeat="gateway in gateways">
+          
+          <td>{{gateway.uuid}}</td>
+          <td><a href="http://{{gateway.ipAddress}}">configure</a></td>
+
+        </tr>
+      </table>
+    </div>
+  </div>
 </div>
