--- a/public/pages/gateways.html
+++ b/public/pages/gateways.html
@@ -10,10 +10,17 @@
     <div ng-hide="gateways.length">No gateways found</div>
     <div class="table-responsive">
       <table class="table table-striped table-hover">
+        <tr>
+          <th>Name</th>
+          <th>UUID</th>
+          <th></th>
+        </tr>
+
         <tr ng-repeat="gateway in gateways">
           
+          <td>{{gateway.name}}</td>
           <td>{{gateway.uuid}}</td>
-          <td><a href="http://{{gateway.ipAddress}}">configure</a></td>
+          <td><a href="http://{{gateway.localhost}}:{{gateway.port}}">configure</a></td>
 
         </tr>
       </table>
