--- a/public/pages/apis.html
+++ b/public/pages/apis.html
@@ -3,7 +3,7 @@
   <ul class="channellist">
 
   	<li ng-repeat="channel in channelList" class="channel_icon-grid-view mod-index-0 pop-over"
-	  	data-original-title="{{channel.description}}" data-placement="auto">
+	  	data-original-title="{{channel.description}}" data-placement="auto" ng-click="openDetails(channel)">
 		<div class="channel is-inactive" id="channel_83">
 			<a href="#">
 				<img alt="500px" class="channel-icon is-size-110  is-using-gray-url" 
@@ -20,3 +20,21 @@
   </ul>
 
 </div>
+
+
+<div>
+    <script type="text/ng-template" id="myModalContent.html">
+        <div class="modal-header">
+            <h3>API Channel Details</h3>
+        </div>
+        <div class="modal-body">
+            <p>
+                {{channel.description}}
+            </p>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" ng-click="ok()">OK</button>
+        </div>
+    </script>
+</div>
+
