--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <link href='assets/images/meta_icons/apple-touch-icon-114x114.png' rel='apple-touch-icon-precomposed' sizes='114x114'>
   <link href='assets/images/meta_icons/apple-touch-icon-144x144.png' rel='apple-touch-icon-precomposed' sizes='144x144'>
 
-	<!-- <title>Octoblu</title> -->
+	<title>Octoblu</title>
 
 	<!-- SCROLLS -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
@@ -61,7 +61,7 @@
 	<header>
 		<nav class="navbar navbar-default navbar-fixed-top">
       <a class='navbar-brand' href='/'>
-			<!-- OCTOBLU -->
+			OCTOBLU
 			</a>
       <a class='toggle-nav btn pull-left' href='#' style="display:none">
         <i class='icon-reorder'></i>
