--- a/public/pages/api_detail.html
+++ b/public/pages/api_detail.html
@@ -5,7 +5,7 @@
   </div>
 
   <div>
-    <button class="btn btn-default" xng-click="open()">Authenticate</button>
+    <button class="btn btn-default" ng-click="authorize(channel)">Authenticate</button>
   </div>
 
 </div>
