--- a/public/pages/gateways.html
+++ b/public/pages/gateways.html
@@ -9,6 +9,41 @@
         <i class='icon-exchange'></i>
         Gateways
       </div>
+      <div class='pull-right'>
+<!--         <button ng-click="addDevice = true" class="btn btn-primary" ng-hide="addDevice">
+          <i class="icon-chevron-down"></i> Add Device
+        </button>
+ -->        
+        <button ng-click="addDevice = false" class="btn btn-primary" ng-show="addDevice">
+          <i class="icon-chevron-up"></i> Cancel
+        </button>
+
+      </div>      
+    </div>
+
+    <div class="col-sm-12" ng-show="addDevice">
+      <h3>Add/Edit Device</h3>   
+      <form name="myForm">          
+        <input class="form-control" name="deviceName" ng-model="deviceName" placeholder="Device Name (required)" ng-value="deviceName" required>
+        <!-- <span ng-show="duplicateDevice" style="color:red;">Device name already exists.</span> -->
+        <br />
+
+        <div ng-repeat="key in keys" class="form-inline">
+          <div class="form-group">
+            <input class="form-control" ng-model="key.key" placeholder="Key">
+          </div>
+          <div class="form-group">
+            <input class="form-control" ng-model="key.value" placeholder="Value">
+          </div>
+          <a href ng-click="removeKeyVals($index)"> <i class="icon-minus"></i></a>
+          <a href ng-click="addKeyVals()"> <i class="icon-plus"></i></a>
+
+        </div>
+
+        <br />
+        <button class="btn" ng-click="createDevice()">Submit</button>  
+        <br /><br />            
+      </form>
     </div>
 
     <div ng-hide="gateways.length">No gateways found</div>
@@ -17,15 +52,23 @@
         <tr>
           <th>Name</th>
           <th>UUID</th>
-          <th></th>
+          <th>Online</th>
+          <th>Action</th>
         </tr>
 
         <tr ng-repeat="gateway in gateways">
           
-          <td>{{gateway.name}}</td>
+          <td>
+            {{gateway.name}}
+          </td>
           <td>{{gateway.uuid}}</td>
-          <!-- <td><a href="http://{{gateway.localhost}}:{{gateway.port}}">configure</a></td> -->
-          <td><a href="/gateway?uuid={{gateway.uuid}}">configure</a></td>
+          <td>{{gateway.online}}</td>
+          <td>
+            <a class="btn" href="/gateway?uuid={{gateway.uuid}}">Goto</a>
+            <button class="btn btn-inverse" ng-click="editDevice($index)">Edit</button>
+            <button class="btn btn-danger" ng-click="deleteDevice($index)">Delete</button>
+          </td>
+
 
         </tr>
       </table>
