--- a/public/pages/apis.html
+++ b/public/pages/apis.html
@@ -6,6 +6,23 @@
   <div class='col-sm-12 box'>
     <div class="text-center">
 
+    	<i class="fa fa-foursquare fa-5x "></i>
+    	<i class="fa fa-flickr fa-5x "></i>
+    	<i class="fa fa-github-square fa-5x "></i>
+    	<i class="fa fa-pintrest fa-5x "></i>
+    	<i class="fa fa-stack-overflow fa-5x "></i>
+    	<i class="fa fa-twitter-square fa-5x "></i>
+    	<i class="fa fa-youtube-square fa-5x "></i>
+    	<i class="fa fa-dropbox fa-5x "></i>
+    	<i class="fa fa-instagram fa-5x "></i>
+    	<i class="fa fa-facebook-square fa-5x "></i>
+    	<i class="fa fa-linkedin-square fa-5x "></i>
+    	<i class="fa fa-tumblr-square fa-5x "></i>
+    	<i class="fa fa-vimeo-square fa-5x "></i>
+    	<i class="fa fa-bitbucket fa-5x "></i>
+    	<i class="fa fa-google-plus-square fa-5x "></i>
+
+
 		  <ul class="channellist">
 
 		  	<li ng-repeat="channel in channelList" class="channel_icon-grid-view mod-index-0 pop-over"
