--- a/public/pages/directives/device-carousel.html
+++ b/public/pages/directives/device-carousel.html
@@ -9,8 +9,8 @@
               <strong style="padding-right: 1em;" >Type:&nbsp;&nbsp;</strong><span class="">{{subdevice.type}}</span>
           </div>
           <div class="btn-group pull-right">
-              <a class="btn btn-danger" ng-click="deleteSubdevice(subdevice, hub)"><i class="fa fa-times"></i></a>
-              <a class="btn btn-inverse" ng-click="editSubdevice(subdevice, hub)"><i class="fa fa-edit"></i></a>
+              <a class="btn btn-danger" ng-click="deleteSubDevice(subdevice, hub)"><i class="fa fa-times"></i></a>
+              <a class="btn btn-inverse" ng-click="editSubDevice(subdevice, hub)"><i class="fa fa-edit"></i></a>
           </div>
 
        </li>
