--- a/public/pages/connector/devices/subdevice/add.html
+++ b/public/pages/connector/devices/subdevice/add.html
@@ -4,7 +4,12 @@
     <h3 class="modal-title text-center" style="padding-bottom: 1em;" id="myModalLabel">{{mode}} {{smartDevice.name}}</h3>
 </div>
 <div class="modal-body">
-    <form class="form-horizontal" name="addSubDeviceForm" role="form" ng-submit="save(addSubDeviceForm.$valid)">
+        <alert ng-repeat="validationError in validationErrors" type="validationError.type" close="closeAlert(validationError)">
+            <strong>{{validationError.summary}}</strong> <br />
+            {{validationError.msg}}
+        </alert>
+
+    <form class="form-horizontal" name="addSubDeviceForm" role="form" ng-click="save()">
         <div class="form-group">
             <label class="col-sm-2 control-label">Hub</label>
             <div class="col-sm-10">
@@ -12,13 +17,13 @@
             </div>
 
         </div>
-        <div class="form-group">
+        <div class="form-group" ng-class="{'has-success' : addSubDeviceForm.deviceName.$valid, 'has-error' : addSubDeviceForm.deviceName.$invalid }">
             <label class="col-sm-2 control-label">Name</label>
             <div class="col-sm-10">
                 <input type="text" name="deviceName"  ng-model="deviceName" placeholder="Name" class="form-control" required="required">
             </div>
         </div>
-        <div class="form-group" ng-repeat="deviceProperty in deviceProperties">
+        <div class="form-group"  ng-repeat="deviceProperty in deviceProperties">
             <div ng-if="deviceProperty.type == 'string'">
                 <input type="text" name="{{deviceProperty.name}}" ng-model="deviceProperty.value" placeholder="{{deviceProperty.name}}" class="form-control" ng-required="{{deviceProperty.required}}">
             </div>
@@ -33,5 +38,5 @@
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="cancel()">Close</button>
-    <button type="submit" class="btn btn-primary" ng-disabled="{{addSubDeviceForm.$invalid}}">Save changes</button>
+    <button type="button" class="btn btn-primary" ng-disabled="{{addSubDeviceForm.$invalid}}" ng-click="addSubDevice()">Save changes</button>
 </div>
