--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -48,30 +48,40 @@
 
         <div class="media-body col-sm-4" style="padding-left: 0; padding-right: 0;">
             <div class="input-group media-heading">
+                <span class="input-group-btn" tooltip="View Hub Details" tooltip-placement="bottom" tooltip-popup-delay="5">
+                    <button type="button" class="btn btn-default" ng-model="g.showDetails" btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false">
+                        <i class="fa" ng-class="{'fa-eye-slash' : g.showDetails, 'fa-eye' : !g.showDetails}"></i>
+                    </button>
+                </span>
                 <input type="text" class="form-control" name="hub-name" readonly="readonly" disabled="disabled" ng-model="g.name" value="{{g.name}}" class="media-heading" ng-blur="saveHubName(g)">
                  <span class="input-group-btn" tooltip="Edit hub name" tooltip-placement="bottom" tooltip-popup-delay="5" >
                     <button type="button" class="btn btn-default"  ng-model="g.isNameEditable" btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false" ng-change="toggleNameEditable(g)"><i class="fa fa-edit"    ></i></button>
                 </span>
             </div>
+            <div class="col-sm-12" style="padding-left: 0; padding-right: 0;">
+                <div collapse="!g.showDetails" class="col-sm-12 " style="padding-left: 0; padding-right: 0;">
+                    <table class="table table-condensed table-bordered">
+                        <tr>
+                            <td class="table-heading"><strong>UUID</strong></td>
+                            <td><span class="label label-primary">{{g.uuid}}</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Token</strong></td>
+                            <td>
+                                <a ng-click="moreInfo = true" ng-hide="moreInfo" href="">********************************</a>
+                                <input type="text" ng-show="moreInfo" value="{{g.token}}" size="40">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><strong>Online</strong></td>
+                            <td><span class="label" ng-class="{'label-success' : g.online, 'label-danger': !g.online}">{{g.online}}</span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
 
-            <table class="table table-condensed table-bordered">
-                <tr>
-                    <td class="table-heading"><strong>UUID</strong></td>
-                    <td><span class="label label-primary">{{g.uuid}}</span></td>
-                </tr>
-                <tr>
-                    <td><strong>Token</strong></td>
-                    <td>
-                      <a ng-click="moreInfo = true" ng-hide="moreInfo" href="">********************************</a>
-                      <input type="text" ng-show="moreInfo" value="{{g.token}}" size="40">
-                    </td>
-                </tr>
-                <tr>
-                    <td><strong>Online</strong></td>
-                    <td><span class="label" ng-class="{'label-success' : g.online, 'label-danger': !g.online}">{{g.online}}</span>
-                    </td>
-                </tr>
-            </table>
+            </div>
+
             <div class="btn-group col-sm-12" style="padding-left: 0px;">
                 <a class="btn btn-danger" tooltip="Delete Hub" tooltip-popup-delay="10" tooltip-placement="right" ng-click="deleteHub(g)"><i
                         class="fa fa-times"></i>Delete</a>
