--- a/public/index.html
+++ b/public/index.html
@@ -221,6 +221,7 @@
     <script src="assets/javascripts/elastic.min.js"></script>
     <script src="assets/javascripts/elasticsearch.angular.js"></script>
     <script src="assets/javascripts/angular-dragdrop.min.js"></script>
+    <script src="assets/javascripts/smoothie.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
