--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -12,14 +12,29 @@
 
             <div class="container-fluid">
               <div class="row">
-                <h2>Stream Live Data</h2>
+                <h2>Live Streaming Data</h2>
                 <div class="input-group">
                   <form class="form-inline col-md-12">
-                  <div class="form-group col-md-8">
-                  <select ng-model="device" ng-options="device.name for device in devices" class="form-control"></select>            
+                  <div class="form-group col-md-12">
+
+                  <div class="form-group">
+
+                    <select ng-model="device" ng-options="device.name for device in devices" class="form-control"></select>            
+            
+
+                  </div>
+                  <div class="form-group"> OR </div>
+                  <div class="form-group">
+                    <input size="40" ng-model="sendUuid" class="form-control" placeholder="UUID">
+                  </div>
+                  <br /><br />
+
+                  <canvas id="mycanvas" width="400" height="100"></canvas>
+
+                  </div>
+                  </form>
                 </div>
-                </form>
-                </div>
+
               </div>
             </div>
 
