--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -18,18 +18,13 @@
                   <div class="form-group col-md-12">
 
                   <div class="form-group">
-
-                    <select ng-model="device" ng-options="device.name for device in devices" class="form-control"></select>            
-            
-
-                  </div>
-                  <div class="form-group"> OR </div>
-                  <div class="form-group">
-                    <input size="40" ng-model="sendUuid" class="form-control" placeholder="UUID">
+                    <select ng-model="device" ng-options="device.name for device in devices" class="form-control" ng-change="sensorListen(device)"></select>                      
                   </div>
                   <br /><br />
 
                   <canvas id="mycanvas" width="400" height="100"></canvas>
+
+                  <div id="legend"></div>
 
                   </div>
                   </form>
