--- a/public/pages/admin/groups/detail.html
+++ b/public/pages/admin/groups/detail.html
@@ -3,9 +3,16 @@
         <div class="panel-heading purple-background">
             <h3 class="title text-center">
                 <i class="fa fa-user fa-lg" style="margin-right: 5px;"></i>People
-                <a  class="pull-right" style="color: #ffffff;">
-                    <i class="fa fa-plus fa-lg"></i>
-                </a>
+                <span class="dropdown pull-right">
+                     <a href class="dropdown-toggle" style="color: #ffffff;">
+                         <i class="fa fa-plus fa-lg"></i><span class="caret"></span>
+                    </a>
+                      <ul class="dropdown-menu">
+                          <li ng-repeat="member in operators">
+                              {{member.email}} <button type="button" class="btn btn-xs btn-default pull-right" ng-click="addMemberToGroup(member)">Add</button>
+                          </li>
+                      </ul>
+                </span>
             </h3>
 
         </div>
@@ -64,9 +71,19 @@
         <div class="panel-heading grass-green-background">
             <h3 class="title text-center">
                 <i class="fa fa-hdd-o fa-lg"></i> Devices
-                <a  class="pull-right" style="color: #ffffff;">
-                    <i class="fa fa-plus fa-lg"></i>
-                </a>
+               <span class="dropdown pull-right">
+                     <a href class="dropdown-toggle" style="color: #ffffff;">
+                         <i class="fa fa-plus fa-lg"></i><span class="caret"></span>
+                     </a>
+                      <ul class="dropdown-menu  list-group" role="menu">
+                          <li class="list-group-item" ng-repeat="device in allDevices| orderBy:'name'" tooltip="{{device.uuid}}"  tooltip-placement="right"
+                              tooltip-popup-delay="5" >
+                              <a role="menuitem" class="dropdown-menu-left">
+                               <input type="checkbox"> {{device.name}}
+                              </a>
+                          </li>
+                      </ul>
+                </span>
             </h3>
         </div>
         <div class="panel-body group-info-panel-body">
