--- a/public/pages/connector/devices/detail/index.html
+++ b/public/pages/connector/devices/detail/index.html
@@ -1,9 +1,9 @@
-<div class="row">
+<div class="row device-detail">
     <h1 style="margin-left: 15px;"><i class="fa fa-hdd-o"></i>Details</h1>
 
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <h2>{{device.name}}</h2>
-        <ul class="list-group col-xs-4">
+        <ul class="list-group col-xl-4 col-lg-5 col-md-6 col-sm-8 col-xs-12">
             <li class="list-group-item">
                 <label>UUID</label>
                 <span class="label label-default pull-right">{{device.uuid}}</span>
@@ -23,9 +23,8 @@
             </li>
         </ul>
         <section class="col-xs-12">
-            <h3>Permissions</h3>
             <tabset>
-                <tab ng-if="device.type === 'gateway'" heading="Subdevices" active="true">
+                <tab ng-hide="device.type !== 'gateway'" heading="Subdevices">
                     <div ng-include="'/pages/connector/devices/detail/subdevices.html'"></div>
                 </tab>
                 <tab heading="Accessible By">
