--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row devices">
     <h1 style="margin-left: 20px;"><i class="fa fa-hdd-o" style="margin-right: 5px;"></i>My Devices</h1>
     <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
         <div class="jumbotron" ng-if="devices.length == 0">
